# DemoEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  build.sh
.github/workflows/: CI.yml  build_cmake.yml  codeql-analysis.yml  coverage.yml
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Engine/: CMakeLists.txt
Engine/include/: Core.h  Editor.h  GLFWWindowSystem.h  ImGuiSystem.h  LogSystem.h  Scene.h  Utils.h  Utils.inl
Engine/include/Assets/: AssetsMgr.h
Engine/include/Scene/: Actor.h  Camera.h  Light.h  Mesh.h  Scene.h  Transform.h
Engine/include/VkRenderer/: Buffer.h  CommandBuffer.h  Context.h  Core.h  Device.h  ImageBuffer.h  Material.h  Surface.h  Swapchain.h  Texture.h  Viewport.h
Engine/include/Wrappers/: glm.h
Engine/src/: Core.cpp  GLFWWindowSystem.cpp  ImGuiSystem.cpp  LogSystem.cpp  Scene.cpp  Utils.cpp  main.cpp
Engine/src/Assets/: AssetsMgr.cpp
Engine/src/Scene/: Actor.cpp  Camera.cpp  Light.cpp  Mesh.cpp  Scene.cpp  Transform.cpp
Engine/src/VkRenderer/: Buffer.cpp  CommandBuffer.cpp  Context.cpp  Core.cpp  Device.cpp  ImageBuffer.cpp  Material.cpp  Mesh.cpp  Surface.cpp  Swapchain.cpp  Texture.cpp  Viewport.cpp
Engine/test/: CMakeLists.txt  CmakeLists.txt
Engine/test/src/: dummy.cpp
Engine/tests/: CMakeLists.txt
Engine/tests/src/: dummy.cpp
EzUtils/: CMakeLists.txt
EzUtils/include/: Editor.h  GLFWWindowSystem.h  ImGuiSystem.h  LogSystem.h  Utils.h  VulkanRendererSystem.h
EzUtils/include/VkRenderer/: Buffer.h  CommandBuffer.h  Context.h  Core.h  Device.h  ImageBuffer.h  Material.h  Mesh.h  Surface.h  Swapchain.h  Texture.h  Viewport.h
EzUtils/src/: ImGuiSystem.cpp  LogSystem.cpp  Scene.cpp  Utils.cpp  VulkanRendererSystem.cpp  main.cpp
EzUtils/src/VkRenderer/: Buffer.cpp  CommandBuffer.cpp  Context.cpp  Core.cpp  Device.cpp  ImageBuffer.cpp  Material.cpp  Mesh.cpp  Surface.cpp  Swapchain.cpp  Texture.cpp  Viewport.cpp
Resources/Material/: Mug.mtl
shaders/: compile.bat  gizmo.frag  gizmo.vert  grid.frag  grid.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
